tests/solidity-semantic-tests/out/errors/via_import/C.clear.teal
#pragma version 10
#pragma typetrack false

// /tmp/multisource_ew01t1p4/s3.sol.C.clear_state_program() -> uint64:
main:
    pushint 1
    return
